--- a/TrinhTest/Pages/Login/ChangePassword.cshtml
+++ b/TrinhTest/Pages/Login/ChangePassword.cshtml
@@ -29,7 +29,7 @@
                                     <div class="row mt-3 form3" id="formEmail">
                                         <div class="field col-12 p-1">
                                             <label data-languagestatic="Email">Email</label>
-                                             <input class="multisteps-form__input form-control" name="emailValidate" type="email" placeholder="Eg. soft@dashboard.com">
+                                             <input class="multisteps-form__input form-control" id="inputChageEmail" name="emailValidate" type="email" placeholder="Eg. soft@dashboard.com">
                                         </div>
                                     </div>
                                     <div class="fixed-botombutton mt-3">
@@ -98,29 +98,29 @@
      function SendMail(){
         $('#formEmail').form('validate form');
         if ($('#formEmail').form('is valid')) {
-                              $("#ChagePass_ShowOTP").addClass("js-active");
-                            $("#formChageEmail").removeClass("js-active");
-                            $("#formChageOTP").addClass("js-active");
-            // AjaxApi(url = "/api/Author/SendMail?emailUser="+$('#inputChageEmail').val()
-            //    ,data= JSON.stringify({
-            //    })
-            //    ,async = true
-            //    , error = function () { notiError_SW() }
-            //    , success = function (result) {
-            //                $("#ChagePass_ShowOTP").addClass("js-active");
-            //                $("#formChageEmail").removeClass("js-active");
-            //                $("#formChageOTP").addClass("js-active");
+            $("#ChagePass_ShowOTP").addClass("js-active");
+            $("#formChageEmail").removeClass("js-active");
+            $("#formChageOTP").addClass("js-active");
+            AjaxApi(url = "/api/Author/SendMail?email="+$('#inputChageEmail').val()
+            ,data= JSON.stringify({
+            })
+            ,async = true
+            , error = function () { notiError_SW() }
+            , success = function (result) {
+                        $("#ChagePass_ShowOTP").addClass("js-active");
+                        $("#formChageEmail").removeClass("js-active");
+                        $("#formChageOTP").addClass("js-active");
 
-            //    }
-            //    , before = function (e) {
-            //        if(e.responseText=="1"){
-            //            num=e.responseText;
-            //                $("#ChagePass_ShowOTP").addClass("js-active");
-            //                $("#formChageEmail").removeClass("js-active");
-            //                $("#formChageOTP").addClass("js-active");
-            //            }
-            //     }
-            //);
+            }
+            , before = function (e) {
+                if(e.responseText=="1"){
+                    num=e.responseText;
+                        $("#ChagePass_ShowOTP").addClass("js-active");
+                        $("#formChageEmail").removeClass("js-active");
+                        $("#formChageOTP").addClass("js-active");
+                    }
+                }
+            );
         };
     }
     function resetPassword(){
