--- a/TrinhTest/Pages/Login/Login.cshtml
+++ b/TrinhTest/Pages/Login/Login.cshtml
@@ -5,7 +5,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login</title>
+     <title>@ViewBag.Title</title>
     <script src="/js/Common/initialize_setting.js"></script>
     <link rel="icon" type="image/x-icon" href="/Assets/img/l">
     <meta charset="UTF-8">
