--- a/TrinhTest/Pages/Doctor/Manufacture/Manufacture_Setting.cshtml
+++ b/TrinhTest/Pages/Doctor/Manufacture/Manufacture_Setting.cshtml
@@ -60,6 +60,9 @@
         </div>
     </div>
 </div>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="/js/Common/main.js"></script>
 <script type="text/javascript">
     var Current_Branch = 0;
     var dataBedApp=[];
@@ -81,7 +84,7 @@
                     }
                 },
                 error: function (xhr, textStatus, errorThrown) {
-                    notiError_SW();
+                    window.location.href=ErrorPage(xhr.status);
                 }
             });
      };
@@ -105,7 +108,7 @@
                     }
                 },
                 error: function (xhr, textStatus, errorThrown) {
-                    notiError_SW();
+                    window.location.href=ErrorPage(xhr.status);
                 }
             });
     };
@@ -122,7 +125,7 @@
                     }
                 },
                 error: function (xhr, textStatus, errorThrown) {
-                    notiError_SW();
+                    window.location.href=ErrorPage(xhr.status);
                 }
             });
     };
