--- a/TrinhTest/Pages/Error/Error404.cshtml
+++ b/TrinhTest/Pages/Error/Error404.cshtml
@@ -13,10 +13,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 my-auto">
-                        <h1 class="display-1 text-bolder text-gradient text-danger">Error 404</h1>
-                        <h2>Erm. Page not found</h2>
+                        <h1 class="display-1 text-bolder text-gradient text-danger">Error 401</h1>
+                        <h2>Page not found</h2>
                         <a class="goback" onclick="ErronrGoHome()">Go Back</a>
-                        <a href="~/Login/Login">Go To Homepage</a>
+                        <a href="/Login/Login">Go To Homepage</a>
                     </div>
                     <div class="col-lg-6 my-auto position-relative">
                         <img class="w-100 position-relative" src="/Assets/img/illustrations/error-404.png" alt="404-error">
