--- a/TrinhTest/wwwroot/css/site.css
+++ b/TrinhTest/wwwroot/css/site.css
@@ -18110,9 +18110,10 @@ textarea.form-control-lg {
     opacity: .85; }
   .card.card-background.card-background-mask-secondary:before {
     background: rgba(0, 0, 0, 0.2); }
-  .card.card-background.card-background-mask-secondary:after {
-    background-image: linear-gradient(310deg, #627594 0%, #A8B8D8 100%);
-    opacity: .85; }
+    .card.card-background.card-background-mask-secondary:after {
+    background-image: linear-gradient(310deg, rgb(33, 82, 255), rgb(33, 212, 253));
+     opacity: .85;
+    }
   .card.card-background.card-background-mask-success:before {
     background: rgba(0, 0, 0, 0.2); }
   .card.card-background.card-background-mask-success:after {
